--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -7,7 +7,7 @@
     border: 1px solid red;
 }*/
 
-.header, .content, .footer {
+#gym-tonic-header, #gym-tonic-content, #gym-tonic-footer {
     /*margin: 0 auto;*/
     clear: both;
     width: 100%;
@@ -26,6 +26,16 @@
     display: table-cell;
     padding-right: 40px;
 }
+
+
+/* HEADER  ###################################################################################################*/
+
+#gym-tonic-header {
+}
+
+
+
+
 
 
 
